# siqad

./: .gitignore  .gitmodules  .qmake.stash  CMakeLists.txt  Doxyfile  OLD_make_everything  README.md  TODO  appveyor.yml  cooldbdesign.xml  dark-theme.css  dark-themebackup.css  db-sim.pro  make_everything  make_everything_dev  stylesheet.css
.github/: dependabot.yml  pull_request_template.md
clean/: db-dim.pro
docs/: .gitignore  conf.py  index.rst  macros.rst  refs.bib  refs.rst  requirements.txt
installer/: README  README.md
libs/: README.md
licenses/: CMakeLists.txt  license_zipper.txt
plugins/: CMakeLists.txt  README.md
plugins/db-pattern-recognition/: .gitignore  dbp_recognition.py
plugins/db-pattern-recognition/swig_siqadconn/: LICENSE  setup.py  siqadconn.i  swig_generate_and_compile
resources/: application.qrc  blank_save.xml  help_text.xml  plugin_services.xml  python_paths.xml
src/: CMakeLists.txt  global.cc  global.h  header_files  main.cc  main.cpp  qmake_compile.sh  siqad.pro  source_files
src/analysis_tool/tts/src/: requirements.txt  time_to_solution.py
src/analysis_tool/tts/src/pysimanneal/: simanneal.py
src/gui/: application.cc  application.cpp  application.h  commander.cc  commander.h  property_map.cc  property_map.h
src/gui/widgets/: afm_manager.h  afm_panel.cc  afm_panel.h  color_dialog.cc  color_dialog.h  completer.cc  completer.h  design_panel.cc  design_panel.cpp  design_panel.h  design_widget.cpp  design_widget.h  dialog_panel.cc  dialog_panel.cpp  dialog_panel.h  electrode_poly_helper.cc  electrode_poly_helper.h  info_panel.cc  info_panel.cpp  info_panel.h  input_field.cc  input_field.cpp  input_field.h  item_manager.cc  item_manager.h  lattice.cpp  lattice.h  layer_editor.cc  layer_editor.h  layer_manager.cc  layer_manager.h  property_editor.cc  property_editor.h  property_form.cc  property_form.h  rotate_dialog.cc  rotate_dialog.h  screenshot_manager.cc  screenshot_manager.h  sim_display_panel.cc  (+7 more)
src/gui/widgets/assistants/: design_assistant.cc  design_assistant.h
src/gui/widgets/components/: README.md  plugin_engine.cc  plugin_engine.h  sim_engine.cc  sim_engine.h  sim_job.cc  sim_job.h
src/gui/widgets/components/job_results/: db_locations.cc  db_locations.h  electron_config_set.cc  electron_config_set.h  job_result.cc  job_result.h  job_result_types.h  potential_landscape.cc  potential_landscape.h  sqcommands.cc  sqcommands.h
src/gui/widgets/managers/: interpreter_manager.h  item_manager.cc  item_manager.h  job_manager.cc  job_manager.h  layer_manager.cc  layer_manager.h  plugin_manager.cc  plugin_manager.h  screenshot_manager.cc  screenshot_manager.h  sim_manager.cc  sim_manager.h
src/gui/widgets/primitives/: afmarea.cc  afmarea.h  afmnode.cc  afmnode.h  afmpath.cc  afmpath.h  afmseg.cc  afmseg.h  aggregate.cc  aggregate.h  dbdot.cc  dbdot.cpp  dbdot.h  dblayer.cc  dblayer.h  electrode.cc  electrode.h  electrode_poly.cc  electrode_poly.h  emitter.cc  emitter.cpp  emitter.h  ghost.cc  ghost.cpp  ghost.h  item.cc  item.h  items.cpp  items.h  latdot.cc  latdot.cpp  latdot.h  lattice.cc  lattice.h  layer.cc  layer.cpp  layer.h  polygon_handle.cc  polygon_handle.h  polygon_segment.cc  (+19 more)
src/gui/widgets/primitives/hull/: convex.cc  convex.h  hull.cc  hull.h  hulls.h
src/gui/widgets/primitives/labels/: labelgroup.h  textlabel.cc  textlabel.h
src/gui/widgets/primitives/visual_aids/: scale_bar.cc  screenshot_clip_area.cc
src/gui/widgets/primitives/visualaids/: scale_bar.cc  scale_bar.h  screenshot_clip_area.cc  screenshot_clip_area.h
src/gui/widgets/visualizers/: electron_config_set_visualizer.cc  electron_config_set_visualizer.h  potential_landscape_visualizer.cc  potential_landscape_visualizer.h  sim_visualizer.cc  sim_visualizer.h
src/helpers/: is_python3.py  map_helper.h  zip_helper.h
src/libs/: README.md
src/phys/: .gitignore  Makefile  README.md  engines.xml  main.cc  phys_engine.cc  phys_engine.h  problem.cc  problem.h  problem_sample.xml  problem_sample.xml.line  problem_sample.xml.standard_test  sim_anneal.cc  sim_anneal.h  sim_anneal_out.xml
src/phys/afmmarcus/: LICENSE  README.md  afm_line_scan.physeng  afm_line_scan.ui  hopping_animator.physeng  hopping_animator.ui
src/phys/afmmarcus/doc/: .gitignore  code-summary.tex  refs.bib  theory.tex
src/phys/afmmarcus/src/: .gitignore  afm_marcus.cc  afm_marcus.h  main.cc  phys_engine.cc  phys_engine.h  problem.cc  problem.h
src/phys/afmmarcus/src/matlab/: Marcus.m
src/phys/afmmarcus/src/python/: .gitignore  afm.py  animator.py  channel.py  db-sim-connector.py  demo.py  hopper.py  model.py
src/phys/poissolver/: engine_description.xml  poissolver
src/phys/simanneal/: .gitignore  Makefile  engine_description.xml  logger.h  main.cc  option_dialog.ui  phys_connector.cc  phys_connector.h  phys_engine.cc  phys_engine.h  problem.cc  problem.h  sim_anneal.cc  sim_anneal.h  sim_problem.xml  sim_result.xml  simanneal
src/phys/simanneal/rapidxml-1.13/: rapidxml_print.hpp
src/phys/siqadconn/: .gitignore  CMakeLists.txt  OLD_swig_compile  README.md  setup.py  siqadconn.cc  siqadconn.h  siqadconn.i  swig_compile_and_install  swig_generate_and_compile
src/phys/siqadconn/docker-build/: Dockerfile  manylinux_newer_tests_Dockerfile
src/phys/siqadconn/src/: siqadconn.cc  siqadconn.h  siqadconn.i
src/plugins/: README.md
src/plugins/db_pattern_recognition/: .gitignore  dbp_recognition.sqplug
src/plugins/db_pattern_recognition/swig_siqadconn/: .gitignore  README.md  siqadconn.cc  siqadconn.h
src/resources/: application.qrc
src/resources/lattices/: si_100_2x1.xml  si_111_1x1.xml
src/resources/properties/: afmarea.xml  electrode.xml
src/resources/settings/: README.md  general.xml  visual.xml
src/settings/: app_settings.ini  gui_settings.ini  gui_settings_backup.ini  settings.cc  settings.cpp  settings.h  settings.ini  settings_dialog.cc  settings_dialog.h
src/settings/defaults/: app_settings.ini  gui_settings.ini
src/settings/defaults/lattices/: si_100_2x1.ini
src/settings/lattices/: si_100_2x1.ini
src/tests/: README.md  siqad_tests.cpp
(+1911 files in other folders)
